update product relation category
